[package]
name = "wzdx-rs"
description = "Serialize and deserialize WZDX"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["wzdx"]
homepage = "https://github.com/phish3y/wzdx-rs"
repository = "https://github.com/phish3y/wzdx-rs"
readme = "READEME.md"

[dependencies]
geo = "0.28.0"
geojson = "0.24.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
