[package]
name = "wzdx"
description = "Rust models for serializing/deserializing WZDx 4.2"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["wzdx"]
homepage = "https://github.com/phish3y/wzdx-rs"
repository = "https://github.com/phish3y/wzdx-rs"
readme = "README.md"
include = [
    "src/*",
    "Cargo.toml",
]

[dependencies]
geo = "0.28.0"
geojson = "0.24.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
